Initial commit of an nhld nav selector, inset map, and map. Still need to work on layout issues.

--- a/portal_ui/static/less/portal_form.less
+++ b/portal_ui/static/less/portal_form.less
@@ -142,10 +142,21 @@
       .make-sm-column(6);
       .make-md-column(7);
     }
+
   }
   #orgSelect {
     .btn-info;
   }
+}
+
+#nhld-inset-map {
+  height : 250px;
+  width : 100%;
+}
+#nhld-map {
+  height : 400px;
+  width : 100%;
+  display: none;
 }
 
 #sampling-params {
